--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,25 @@
     <groupId>pl.sytomczak</groupId>
     <artifactId>zoo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.assertj</groupId>swing
-            <artifactId>assertj-core</artifactId>
-            <version>3.11.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
